--- a/git/disputils/file/dattr.c.html
+++ b/git/disputils/file/dattr.c.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
-</span></td></tr><tr><td></td><td>
+</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/disputils.git">git://thetudor.ddns.net/disputils.git</a></td></tr><tr><td></td><td>
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> dattr.c (2190B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> dattr.c (2183B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -107,6 +107,10 @@
 <a href="#l89" id="l89">89</a>
 <a href="#l90" id="l90">90</a>
 <a href="#l91" id="l91">91</a>
+<a href="#l92" id="l92">92</a>
+<a href="#l93" id="l93">93</a>
+<a href="#l94" id="l94">94</a>
+<a href="#l95" id="l95">95</a>
 </pre></td><td><pre>
 /* disputils dattr.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
@@ -116,6 +120,7 @@
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
+#include &lt;unistd.h&gt;
 #include &quot;arg.h&quot;
 #include &quot;randr.h&quot;
 #include &quot;util.h&quot;
@@ -126,13 +131,17 @@ xcb_screen_t *scrn;
 void
 usage(char *name)
 {
-    printf(&quot;usage: %s [whxy] &lt;display_id&gt; \n&quot;, name);
+    printf(&quot;usage: %s [-whxy] &lt;display_id&gt; \n&quot;, name);
     exit(0);
 }
 
 int
 main(int argc, char *argv[])
 {
+#ifdef __OpenBSD__
+    if (pledge (&quot;stdio rpath unix&quot;, NULL) == -1)
+        err(1, &quot;pledge&quot;);
+#endif
     xcb_randr_output_t output = -1;
     xcb_randr_get_output_info_reply_t *output_info = NULL;
     xcb_randr_crtc_t screen_crtc;
@@ -156,7 +165,7 @@ main(int argc, char *argv[])
 
         int j = 0;
         while (j &lt; o_len &amp;&amp; output == -1) {
-            if (strcmp(output_name, (const char *)get_output_name(conn, os[j])) == 0)
+            if (strcmp(output_name, get_output_name(conn, os[j])) == 0)
                 output = os[j];
 
             j++;
@@ -192,8 +201,7 @@ main(int argc, char *argv[])
             printf(&quot;%d \n&quot;, screen_crtc_info-&gt;y);
             break;
     } ARGEND;
-    /* print a space if more attributes come after */
-    /* putc(i + 1 &lt; strlen(argv[1]) ? &apos; &apos; : &apos;\n&apos;, stdout); */
+
     free(output_info);
     free(screen_crtc_info);
     kill_xcb(&amp;conn);
