--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -11,27 +11,38 @@
 </head>
 <body>
 <table><tr><td><a href="../"><img src="logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
-</span></td></tr><tr><td></td><td>
+</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/disputils.git">git://thetudor.ddns.net/disputils.git</a></td></tr><tr><td></td><td>
 <a href="log.html">Log</a> | <a href="files.html">Files</a> | <a href="refs.html">Refs</a> | <a href="file/README.html">README</a> | <a href="file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
-<tr><td>2016-04-18 01:31</td><td><a href="commit/244ee870ff21c24c807c265d26fed86cbc8c9d6c.html">fix license</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
-<tr><td>2016-04-17 18:19</td><td><a href="commit/3e0e0ab415c5a764a751798fce5a3282fe60f6c2.html">docs: fix man makefile</a></td><td>ix</td><td class="num">1</td><td class="num">+3</td><td class="num">-0</td></tr>
-<tr><td>2016-04-17 18:19</td><td><a href="commit/b61e681e6ad489fb9045b19a7a75e864aeddacac.html">docs: fix dattr manpage, add ppd manpage</a></td><td>ix</td><td class="num">2</td><td class="num">+23</td><td class="num">-7</td></tr>
-<tr><td>2016-04-17 17:58</td><td><a href="commit/6e03e58ae2f972f35eefabacd6db5cce82c18abb.html">Merge branch &apos;master&apos; of yuuko:/srv/repositories/disputils</a></td><td>ix</td><td class="num">0</td><td class="num">+0</td><td class="num">-0</td></tr>
-<tr><td>2016-04-17 17:49</td><td><a href="commit/1f076f184045c05db5317542804d4656d58f8eff.html">fix: remove .openbsd</a></td><td>ix</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
-<tr><td>2016-04-17 17:14</td><td><a href="commit/ab8bff25a3cfff18ce268539a31252ce21cfd299.html">fix: remove junk</a></td><td>ix</td><td class="num">2</td><td class="num">+1</td><td class="num">-0</td></tr>
-<tr><td>2016-04-17 17:14</td><td><a href="commit/467c0930cfb37287919d97feee4cf01b26e2301a.html">style: use flags</a></td><td>ix</td><td class="num">3</td><td class="num">+19</td><td class="num">-19</td></tr>
-<tr><td>2016-04-17 16:54</td><td><a href="commit/968935349ab8df30e6d5f5297642d173a01a721a.html">style: header orders</a></td><td>ix</td><td class="num">6</td><td class="num">+4</td><td class="num">-10</td></tr>
-<tr><td>2016-04-17 23:37</td><td><a href="commit/2faa7562f6c0cb6d33611f523f83fb90c3c7679e.html">add ppd: print primary output</a></td><td>Tudor</td><td class="num">4</td><td class="num">+62</td><td class="num">-1</td></tr>
-<tr><td>2016-04-17 22:40</td><td><a href="commit/0ef9d82c260f6eda7fec61ca3beb79cc3e28bf76.html">clean it up</a></td><td>Tudor</td><td class="num">6</td><td class="num">+11</td><td class="num">-11</td></tr>
-<tr><td>2016-04-17 22:35</td><td><a href="commit/8cc5d210612a5fd3706376e43c5737b067586232.html">fix dattr usage</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
-<tr><td>2016-04-17 22:34</td><td><a href="commit/e09ae7c417e0720eb593b78504cf0a3647f9af61.html">remove statics</a></td><td>Tudor</td><td class="num">3</td><td class="num">+9</td><td class="num">-9</td></tr>
-<tr><td>2016-04-17 22:27</td><td><a href="commit/3c7e490963856c659530f12abe9a4088f9fd7fe5.html">Begin cleanup</a></td><td>Tudor</td><td class="num">8</td><td class="num">+42</td><td class="num">-29</td></tr>
-<tr><td>2016-04-17 03:04</td><td><a href="commit/44a57042e9181fb0a3d195025e2903127628b5c5.html">our bro pfd.c is here, lads</a></td><td>Tudor</td><td class="num">2</td><td class="num">+89</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 13:48</td><td><a href="commit/3ef47fa174c03b5f9e591c89a39de5b6c81ebca0.html">dattr: removed useless cast</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 13:46</td><td><a href="commit/d35d8c5d55d4416d2f283c117e1323c353851ab1.html">trying to fix lsd printing strange characters</a></td><td>Tudor</td><td class="num">4</td><td class="num">+8</td><td class="num">-6</td></tr>
+<tr><td>2016-04-18 13:39</td><td><a href="commit/06c1fbae22e7054ef2c2c8417bd2be1a44b964be.html">lsd: clean the print name function</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 13:38</td><td><a href="commit/7fe01da5d2fd5374bfac119af3ae5fd4645be3ec.html">randr.c: double check the name</a></td><td>Tudor</td><td class="num">1</td><td class="num">+5</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 13:13</td><td><a href="commit/e4ef424d779ef7446ccec0ac87a7d02537c3bb65.html">dattr: removed two useless lines</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-2</td></tr>
+<tr><td>2016-04-18 12:18</td><td><a href="commit/004f897465709db110023cc8937c9628a8dec008.html">fix: README and LICENSE</a></td><td>Tudor</td><td class="num">2</td><td class="num">+5</td><td class="num">-5</td></tr>
+<tr><td>2016-04-18 12:14</td><td><a href="commit/8b2cf5c500f56b59e5dd287105667eac0406804e.html">lsd: only print displays in use</a></td><td>Tudor</td><td class="num">1</td><td class="num">+8</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 12:07</td><td><a href="commit/346818a4d9f6721eee4fba4544779eee919c30c4.html">fix: pfd crashing</a></td><td>Tudor</td><td class="num">3</td><td class="num">+15</td><td class="num">-18</td></tr>
+<tr><td>2016-04-17 21:39</td><td><a href="commit/5cb7dacb05f560c9bef95dd9e7bee2b4e9a157d4.html">feat: run pledge(2) on openbsd</a></td><td>ix</td><td class="num">5</td><td class="num">+22</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 21:05</td><td><a href="commit/b2a5278cfc142aaf579084d7a8ec353bbcfc6e98.html">fix: segfault fix</a></td><td>ix</td><td class="num">1</td><td class="num">+2</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 18:19</td><td><a href="commit/32de75ef642f12e7bbe454afed4dba5160adae8f.html">docs: fix man makefile</a></td><td>ix</td><td class="num">1</td><td class="num">+3</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 18:19</td><td><a href="commit/5cf3c1e29c6d13f62e9e2aef3aa5e5dfbf3d3cca.html">docs: fix dattr manpage, add ppd manpage</a></td><td>ix</td><td class="num">2</td><td class="num">+23</td><td class="num">-7</td></tr>
+<tr><td>2016-04-17 17:49</td><td><a href="commit/fa3ad1e321ef4ed4487e527ba3f0eca75d68ac9e.html">fix: remove .openbsd</a></td><td>ix</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/3d80e99efd87cf29f5ed710eb39487225e0ad36a.html">fix: remove junk</a></td><td>ix</td><td class="num">1</td><td class="num">+0</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/b942fc3d17e8e4d73dc08fd48385afa6ed1e9d49.html">style: use flags. fuck you tudoo</a></td><td>ix</td><td class="num">2</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 17:49</td><td><a href="commit/b95e2ff84f979674f04b50c0115e888ebc4c7007.html">fix: remove .openbsd</a></td><td>ix</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/9869dbe1179e75f43157f89a4ce0f452081a7c3c.html">fix: remove junk</a></td><td>ix</td><td class="num">2</td><td class="num">+1</td><td class="num">-0</td></tr>
+<tr><td>2016-04-17 17:14</td><td><a href="commit/f68569bbd226b7ea43eb8a9c5875d1862293bd2d.html">style: use flags</a></td><td>ix</td><td class="num">3</td><td class="num">+19</td><td class="num">-19</td></tr>
+<tr><td>2016-04-17 16:54</td><td><a href="commit/4a8cc9ffa5419429b7adc207fab19acd4ed7166c.html">style: header orders</a></td><td>ix</td><td class="num">6</td><td class="num">+4</td><td class="num">-10</td></tr>
+<tr><td>2016-04-17 23:37</td><td><a href="commit/ad604c2104fbb35c4dfc459f7247ddec4e7b92ce.html">add ppd: print primary output</a></td><td>Tudor</td><td class="num">4</td><td class="num">+62</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 22:40</td><td><a href="commit/d046a9ae97e3cf430c3bac0df47f24f6ca4bb8d7.html">clean it up</a></td><td>Tudor</td><td class="num">6</td><td class="num">+11</td><td class="num">-11</td></tr>
+<tr><td>2016-04-17 22:35</td><td><a href="commit/dc31c4303ac079806d5853d3e6f730d706e3ed78.html">fix dattr usage</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-17 22:34</td><td><a href="commit/388631bc4646cb219e5d8b19bc034831eab2ddc4.html">remove statics</a></td><td>Tudor</td><td class="num">3</td><td class="num">+9</td><td class="num">-9</td></tr>
+<tr><td>2016-04-17 22:27</td><td><a href="commit/b026b32a019502cce15537a79be91fe0416d5ad8.html">Begin cleanup</a></td><td>Tudor</td><td class="num">8</td><td class="num">+42</td><td class="num">-29</td></tr>
+<tr><td>2016-04-17 03:04</td><td><a href="commit/64c2b06517f67c2f7ceb328925d2d304c77374ee.html">add: pfd</a></td><td>Tudor</td><td class="num">2</td><td class="num">+89</td><td class="num">-1</td></tr>
 <tr><td>2016-04-17 02:47</td><td><a href="commit/5d529e2cc8d8a90cb6b88eb710404d3e5559a627.html">rewrite take 2</a></td><td>Tudor</td><td class="num">11</td><td class="num">+243</td><td class="num">-60</td></tr>
 <tr><td>2016-04-15 12:59</td><td><a href="commit/edcf18b25f929bf8be9b6a2a7df7921730f0443a.html">begin to 26c8/knf</a></td><td>ix</td><td class="num">6</td><td class="num">+117</td><td class="num">-99</td></tr>
 <tr><td>2016-04-15 12:45</td><td><a href="commit/6a10d27cf4c21bba82404e7dfe6987d01e899ed1.html">init rewrite commit</a></td><td>ix</td><td class="num">15</td><td class="num">+441</td><td class="num">-131</td></tr>
