--- a/git/disputils/commit/3d80e99efd87cf29f5ed710eb39487225e0ad36a.html
+++ b/git/disputils/commit/3d80e99efd87cf29f5ed710eb39487225e0ad36a.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<title>config.mk - disputils - wmutils/xrandr powered multimonitor display utils
+<title>fix: remove junk - disputils - wmutils/xrandr powered multimonitor display utils
 </title>
 <link rel="icon" type="image/png" href="../favicon.png" />
 <link rel="alternate" type="application/atom+xml" title="disputils.git Atom Feed" href="../atom.xml" />
@@ -11,29 +11,23 @@
 </head>
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
-</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/disputils.git">git://thetudor.ddns.net/disputils.git</a></td></tr><tr><td></td><td>
+</span></td></tr><tr><td></td><td>
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> config.mk (135B)</p><hr/><table id="blob"><tr><td class="num"><pre>
-<a href="#l1" id="l1">1</a>
-<a href="#l2" id="l2">2</a>
-<a href="#l3" id="l3">3</a>
-<a href="#l4" id="l4">4</a>
-<a href="#l5" id="l5">5</a>
-<a href="#l6" id="l6">6</a>
-<a href="#l7" id="l7">7</a>
-<a href="#l8" id="l8">8</a>
-</pre></td><td><pre>
-PREFIX = /usr
-MANPREFIX = $(PREFIX)/share/man
+<pre><b>commit</b> <a href="../commit/3d80e99efd87cf29f5ed710eb39487225e0ad36a.html">3d80e99efd87cf29f5ed710eb39487225e0ad36a</a>
+<b>parent</b> <a href="../commit/b942fc3d17e8e4d73dc08fd48385afa6ed1e9d49.html">b942fc3d17e8e4d73dc08fd48385afa6ed1e9d49</a>
+<b>Author:</b> ix &lt;<a href="mailto:arcetera@openmailbox.org">arcetera@openmailbox.org</a>&gt;
+<b>Date:</b>   Sun Apr 17 17:14:35 2016
 
-CC = cc
-LD = $(CC)
+fix: remove junk
 
-CFLAGS += -std=c99 -pedantic -Wall -O2
-LDFLAGS += -lxcb -lxcb-randr
-</pre></td></tr></table>
+<b>Diffstat:</b>
+ ppd | Bin 14796 -&gt; 0 bytes
+ 1 file changed, 0 insertions(+), 0 deletions(-)
+<hr/><b>diff --git a/<a href="../file/ppd.html">ppd</a> b/<a href="../file/ppd.html">ppd</a></b>
+Binary files differ
+</pre>
 </div>
 </body>
 </html>
