--- a/git/disputils/file/.gitignore.html
+++ b/git/disputils/file/.gitignore.html
@@ -11,18 +11,20 @@
 </head>
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
-</span></td></tr><tr><td></td><td>
+</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/disputils.git">git://thetudor.ddns.net/disputils.git</a></td></tr><tr><td></td><td>
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .gitignore (22B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .gitignore (29B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
 <a href="#l4" id="l4">4</a>
 <a href="#l5" id="l5">5</a>
+<a href="#l6" id="l6">6</a>
 </pre></td><td><pre>
 *.o
+*.core
 lsd
 pfd
 ppd
