--- a/git/disputils/file/randr.c.html
+++ b/git/disputils/file/randr.c.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 <table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>disputils</h1><span class="desc">wmutils/xrandr powered multimonitor display utils
-</span></td></tr><tr><td></td><td>
+</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/disputils.git">git://thetudor.ddns.net/disputils.git</a></td></tr><tr><td></td><td>
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> randr.c (4147B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> randr.c (4150B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -145,6 +145,10 @@
 <a href="#l127" id="l127">127</a>
 <a href="#l128" id="l128">128</a>
 <a href="#l129" id="l129">129</a>
+<a href="#l130" id="l130">130</a>
+<a href="#l131" id="l131">131</a>
+<a href="#l132" id="l132">132</a>
+<a href="#l133" id="l133">133</a>
 </pre></td><td><pre>
 /* disputils randr.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
@@ -200,14 +204,20 @@ get_output_info(xcb_connection_t* conn, xcb_randr_output_t output)
     return output_info_reply;
 }
 
-uint8_t* get_output_name(xcb_connection_t* conn, xcb_randr_output_t output)
+const char*
+get_output_name(xcb_connection_t* conn, xcb_randr_output_t output)
 { /* get output&apos;s name, like LVDS-1 */
     xcb_randr_get_output_info_reply_t* r;
+    char *name;
+
     r = get_output_info(conn, output);
-    return xcb_randr_get_output_info_name(r);
+    name = xcb_randr_get_output_info_name(r);
+    name[r-&gt;name_len] = &apos;\0&apos;;
+    return name;
 }
 
-int get_output_connection(xcb_connection_t* conn, xcb_randr_output_t output)
+int
+get_output_connection(xcb_connection_t* conn, xcb_randr_output_t output)
 { /* returns 0 if the output is connected */
     xcb_randr_get_output_info_reply_t* r;
     r = get_output_info(conn, output);
@@ -223,8 +233,6 @@ get_output_crtc_info(xcb_connection_t* conn, xcb_randr_crtc_t crtc)
 
     xcb_randr_get_crtc_info_reply_t *crtc_info_reply;
     crtc_info_reply = xcb_randr_get_crtc_info_reply(conn, cic, NULL);
-    if (!crtc_info_reply)
-        errx(1, &quot;Output not in use&quot;);
 
     return crtc_info_reply;
 }
