--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-18 19:15</td><td><a href="commit/4273da71d12daaeabbf7a2121054ee8b5cb2d7e1.html">dattr: remove spaces from output</a></td><td>Tudor</td><td class="num">1</td><td class="num">+4</td><td class="num">-4</td></tr>
+<tr><td>2016-04-18 16:35</td><td><a href="commit/b58de15e9174c69cc1f4bde6831a5dbc096fc325.html">randr.c: cleaned get_output_name</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-4</td></tr>
 <tr><td>2016-04-18 13:48</td><td><a href="commit/3ef47fa174c03b5f9e591c89a39de5b6c81ebca0.html">dattr: removed useless cast</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
 <tr><td>2016-04-18 13:46</td><td><a href="commit/d35d8c5d55d4416d2f283c117e1323c353851ab1.html">trying to fix lsd printing strange characters</a></td><td>Tudor</td><td class="num">4</td><td class="num">+8</td><td class="num">-6</td></tr>
 <tr><td>2016-04-18 13:39</td><td><a href="commit/06c1fbae22e7054ef2c2c8417bd2be1a44b964be.html">lsd: clean the print name function</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
