--- a/git/disputils/file/randr.c.html
+++ b/git/disputils/file/randr.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> randr.c (4150B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> randr.c (4101B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -146,9 +146,6 @@
 <a href="#l128" id="l128">128</a>
 <a href="#l129" id="l129">129</a>
 <a href="#l130" id="l130">130</a>
-<a href="#l131" id="l131">131</a>
-<a href="#l132" id="l132">132</a>
-<a href="#l133" id="l133">133</a>
 </pre></td><td><pre>
 /* disputils randr.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
@@ -208,12 +205,9 @@ const char*
 get_output_name(xcb_connection_t* conn, xcb_randr_output_t output)
 { /* get output&apos;s name, like LVDS-1 */
     xcb_randr_get_output_info_reply_t* r;
-    char *name;
 
     r = get_output_info(conn, output);
-    name = xcb_randr_get_output_info_name(r);
-    name[r-&gt;name_len] = &apos;\0&apos;;
-    return name;
+    return (const char *)xcb_randr_get_output_info_name(r);
 }
 
 int
