--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,7 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-18 19:41</td><td><a href="commit/4ac082cd0fe4dfdb01b1c1d010684c58f061ef3c.html">misc</a></td><td>Tudor</td><td class="num">2</td><td class="num">+2</td><td class="num">-2</td></tr>
 <tr><td>2016-04-17 22:42</td><td><a href="commit/e1810f35d42444602b6638ab0d84a6ab841db5aa.html">new things</a></td><td>Tudor</td><td class="num">5</td><td class="num">+352</td><td class="num">-25</td></tr>
 <tr><td>2016-04-17 01:57</td><td><a href="commit/c1c9798617c81be3ef55aab72911d18899d58e6b.html">color scheme: designr by dkeg</a></td><td>Tudor</td><td class="num">7</td><td class="num">+45</td><td class="num">-7</td></tr>
 <tr><td>2016-04-16 21:27</td><td><a href="commit/f9cf6a197c4cef8cfe784f0d0093e867c7eb0d1c.html">tab size</a></td><td>Tudor</td><td class="num">1</td><td class="num">+3</td><td class="num">-2</td></tr>
