--- a/git/crux-ports/files.html
+++ b/git/crux-ports/files.html
@@ -30,6 +30,9 @@
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/.footprint.html">cwm/.footprint</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/.md5sum.html">cwm/.md5sum</a></td><td class="num">1L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/Pkgfile.html">cwm/Pkgfile</a></td><td class="num">17L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/disputils/.footprint.html">disputils/.footprint</a></td><td class="num">13L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/disputils/.md5sum.html">disputils/.md5sum</a></td><td class="num">0B</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/disputils/Pkgfile.html">disputils/Pkgfile</a></td><td class="num">25L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/dpkg/.footprint.html">dpkg/.footprint</a></td><td class="num">381L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/dpkg/.md5sum.html">dpkg/.md5sum</a></td><td class="num">1L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/dpkg/Pkgfile.html">dpkg/Pkgfile</a></td><td class="num">26L</td></tr>
