--- a/git/crux-ports/log.html
+++ b/git/crux-ports/log.html
@@ -18,6 +18,7 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-19 13:52</td><td><a href="commit/c073c3ac190e5605afc35ed22c965776c3c98146.html">add: disputils</a></td><td>Tudor</td><td class="num">3</td><td class="num">+38</td><td class="num">-0</td></tr>
 <tr><td>2016-04-16 13:37</td><td><a href="commit/b65a2c892483d601da505d0033f829284b4e809b.html">tinc: version</a></td><td>Tudor</td><td class="num">2</td><td class="num">+2</td><td class="num">-2</td></tr>
 <tr><td>2016-04-15 18:26</td><td><a href="commit/93711ce72c45599f2464364e086f41b87fe586d3.html">Add: zathura-pdf-poppler</a></td><td>Tudor</td><td class="num">3</td><td class="num">+26</td><td class="num">-0</td></tr>
 <tr><td>2016-04-11 21:59</td><td><a href="commit/9864ff69951f593b50d3af6a5ce2fb45f5fc6f18.html">added: telegram-cli</a></td><td>Tudor</td><td class="num">3</td><td class="num">+34</td><td class="num">-0</td></tr>
