disputils and strange cow

--- a/cow/index.html
+++ b/cow/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>cow</title>
     <meta charset="utf-8">
+    <style>
+      pre {
+        transform:rotateX(180deg);
+      }
+    </style>
   </head>
   <body>
     <pre>
