--- a/git/disputils/file/dattr.c.html
+++ b/git/disputils/file/dattr.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> dattr.c (2179B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> dattr.c (2222B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -111,6 +111,8 @@
 <a href="#l93" id="l93">93</a>
 <a href="#l94" id="l94">94</a>
 <a href="#l95" id="l95">95</a>
+<a href="#l96" id="l96">96</a>
+<a href="#l97" id="l97">97</a>
 </pre></td><td><pre>
 /* disputils dattr.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
@@ -200,6 +202,8 @@ main(int argc, char *argv[])
         case &apos;y&apos;:
             printf(&quot;%d\n&quot;, screen_crtc_info-&gt;y);
             break;
+        default:
+            usage(argv0);
     } ARGEND;
 
     free(output_info);
